feat: 日報登録画面のレビュー指摘を反映